@@ -1,3 +1,7 @@
+2012-04-26 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-06-62
+	* fix to keep Description/Contacts field values in import and migration
+	
 2012-04-25 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-61
 	* fix StringIndexOutOfBoundsException at VStringParameter.java
